tests/lit/globalchecks/rethrow_01.isa
// RUN: not %iii --max-errors=10 --batchmode %s | filecheck %s
// Copyright (C) 2023-2026 Intel Corporation

exception E;

function T?() -> Integer
begin
    // Note: functions that return a value cannot be noreturn
    // so we add an if statement to make it look optional
    if True then throw E; end;
    return 0;
end

function G() -> Integer
begin
    return T?() + 1;
end

function F() -> Integer
begin
    return G();
// CHECK: Type error: call to function `G.0` should be marked with `?` or `!` because it can throw an exception
end

